--- a/CFAF240240A1-013T_Adalogger/.vscode/settings.json
+++ b/CFAF240240A1-013T_Adalogger/.vscode/settings.json
@@ -9,6 +9,7 @@
     "xstring": "cpp",
     "xtree": "cpp",
     "xutility": "cpp",
-    "istream": "cpp"
+    "istream": "cpp",
+    "xlocale": "cpp"
   }
 }
