Finished folding in the ability to write fonts Streamlines some functions And enabled multiple tests

--- a/CFAF240240A1-013T_Adalogger/.vscode/settings.json
+++ b/CFAF240240A1-013T_Adalogger/.vscode/settings.json
@@ -10,6 +10,8 @@
     "xtree": "cpp",
     "xutility": "cpp",
     "istream": "cpp",
-    "xlocale": "cpp"
+    "xlocale": "cpp",
+    "functional": "cpp",
+    "xiosbase": "cpp"
   }
 }
